git ignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
 node_modules
+.eslintcache
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/Portfoliov2.iml
+/.idea/vcs.xml
+/build/static/css/main.8d2b8d39.chunk.css
+/build/static/css/main.8d2b8d39.chunk.css.map
+/build/static/js/2.0a84d0cc.chunk.js
+/build/static/js/2.0a84d0cc.chunk.js.LICENSE.txt
+/build/static/js/2.0a84d0cc.chunk.js.map
+/build/static/js/3.3e9fe41b.chunk.js
+/build/static/js/3.3e9fe41b.chunk.js.map
+/build/static/js/main.49c7a7f2.chunk.js
+/build/static/js/main.49c7a7f2.chunk.js.map
+/build/static/js/runtime-main.7947b54d.js
+/build/static/js/runtime-main.7947b54d.js.map
+/build/static/media/bijay.f8a69f10.png
+/build/static/media/css.5bd8c816.png
+/build/static/media/flower.4cb8b2da.jpg
+/build/asset-manifest.json
+/build/favicon.ico
+/build/index.html
+/build/index0.html
+/build/logo.png
+/build/logo192.png
+/build/logo512.png
+/build/manifest.json
+/build/robots.txt
