--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,15 @@ node_modules
 /build/logo512.png
 /build/manifest.json
 /build/robots.txt
+/build/static/css/main.6b6a04fd.chunk.css
+/build/static/css/main.6b6a04fd.chunk.css.map
+/build/static/js/2.7c8c45c5.chunk.js
+/build/static/js/2.7c8c45c5.chunk.js.LICENSE.txt
+/build/static/js/2.7c8c45c5.chunk.js.map
+/build/static/js/3.0387e709.chunk.js
+/build/static/js/3.0387e709.chunk.js.map
+/build/static/js/main.39870ef2.chunk.js
+/build/static/js/main.39870ef2.chunk.js.map
+/build/static/js/runtime-main.d08089b7.js
+/build/static/js/runtime-main.d08089b7.js.map
+/build/static/media/BPResume.b1c977b3.pdf
